<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/UCSD_title"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_string"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.59">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Enter_bus_stop"
                android:id="@+id/enter_ucsd"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Auto_bus_stop"
                android:id="@+id/auto_ucsd"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_above="@+id/enter_ucsd"
                android:layout_alignLeft="@+id/auto_ucsd"
                android:layout_alignStart="@+id/auto_ucsd"
                android:layout_alignRight="@+id/auto_ucsd"
                android:layout_alignEnd="@+id/auto_ucsd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:id="@+id/textView4"
                android:layout_below="@+id/auto_ucsd"
                android:layout_centerHorizontal="true"
                android:textSize="30sp" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>