<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.myapplication.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/ask_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/UCSD_title"
            android:id="@+id/ask_bus_type"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_string"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.00">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Auto_bus_stop"
                android:id="@+id/auto_ucsd"
                android:layout_marginBottom="43dp"
                android:layout_above="@+id/textView4"
                android:layout_alignRight="@+id/enter_ucsd"
                android:layout_alignEnd="@+id/enter_ucsd" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/Address"
                android:layout_above="@+id/enter_ucsd"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:id="@+id/textView4"
                android:textSize="30sp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/textView4"
                android:layout_alignRight="@+id/Address"
                android:layout_alignEnd="@+id/Address"
                android:layout_alignLeft="@+id/Address"
                android:layout_alignStart="@+id/Address"
                android:layout_above="@+id/Address" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Enter_bus_stop"
                android:id="@+id/enter_ucsd"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageView"
                android:src="@drawable/location"
                android:layout_alignTop="@+id/auto_ucsd"
                android:layout_toRightOf="@+id/auto_ucsd"
                android:layout_toEndOf="@+id/auto_ucsd"
                android:contentDescription="@string/pin" />

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="129dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/location_choice"
                android:layout_gravity="center"
                android:contentDescription="@string/location" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>